Om de corresponderende entry op te vragen in de Fields-tabel, is de GUID van het idee nodig. Deze kon niet meer zo eenvoudig opgehaald worden aangezien we al een aantal calls dieper zaten op het moment dat het nodig was. Daarnaast werd de code vrij onoverzichtelijk. Daarom wordt de code opgedeeld in verschillende methides.
Deel 1: GET-call voor alle ideeën werkt.

--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -3,7 +3,10 @@
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
-					<content></content>
+					<content>
+						<Button text="Get your tasks" type="Emphasized" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"
+							press="getTasks"/>
+					</content>
 				</Page>
 			</pages>
 		</App>
