--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -5,7 +5,7 @@
 				<Page id="page" title="{i18n>title}">
 					<content>
 						<Button text="Get your tasks" type="Emphasized" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"
-							press="getTasks"/>
+							press="tasksButtonPush"/>
 					</content>
 				</Page>
 			</pages>
