--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -4,12 +4,10 @@
 			<pages>
 				<Page id="page" title="{i18n>title}">
 					<content>
-						<Button text="Get your tasks" type="Emphasized" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"
-							press="tasksButtonPush"/>
-						<!-- <List items="{/d/results}">
+						<List items="{/d/results}">
 							<items>
 								<ObjectListItem title="{Name}"/></items>
-						</List> -->
+						</List>
 					</content>
 				</Page>
 			</pages>
