onClick-methode toegevoegd aan het de ideeënlijst.

--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -6,7 +6,7 @@
 					<content>
 						<List items="{/d/results}">
 							<items>
-								<ObjectListItem title="{Name}"/></items>
+								<ObjectListItem title="{Name}" press="onIdeaSelection" type="Navigation"/></items>
 						</List>
 					</content>
 				</Page>
