--- a/webapp/view/tasksOverview.view.xml
+++ b/webapp/view/tasksOverview.view.xml
@@ -1,8 +1,8 @@
 <mvc:View controllerName="com.Flexso.DPO.Gegevensinvoer_Sales.controller.Home" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
-	<Shell id="shell">
-		<App id="app">
+	<Shell id="shell2">
+		<App id="app2">
 			<pages>
-				<Page id="page" title="{i18n>title}">
+				<Page id="page2" title="{i18n>title}">
 					<content></content>
 				</Page>
 			</pages>
