Tijdelijk een aantal knoppen toegevoegd aan de detail view.

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,5 +3,8 @@
 		<beginColumnPages>
 			<mvc:XMLView id="beginView" viewName="com.Flexso.DPO.Gegevensinvoer_Sales.view.Home"/>
 		</beginColumnPages>
+		<midColumnPages>
+			<mvc:XMLView id="detailView" viewName="com.Flexso.DPO.Gegevensinvoer_Sales.view.tasksOverview"/>
+		</midColumnPages>
 	</FlexibleColumnLayout>
 </mvc:View>
