--- a/webapp/view/tasksOverview.view.xml
+++ b/webapp/view/tasksOverview.view.xml
@@ -1,12 +1,15 @@
-<mvc:View controllerName="com.Flexso.DPO.Gegevensinvoer_Sales.controller.tasksOverview" xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-	xmlns="sap.m">
-	<Shell id="shell2">
-		<App id="app2">
-			<pages>
-				<Page id="page2" title="{i18n>title}">
-					<content></content>
-				</Page>
-			</pages>
-		</App>
-	</Shell>
+<mvc:View xmlns="sap.uxap" xmlns:m="sap.m" xmlns:f="sap.f" xmlns:form="sap.ui.layout.form" xmlns:mvc="sap.ui.core.mvc">
+	<ObjectPageLayout id="ObjectPageLayout" showTitleInHeaderContent="true" alwaysShowContentHeader="false" preserveHeaderStateOnScroll="false"
+		headerContentPinnable="true" isChildPage="true" upperCaseAnchorBar="false">
+		<headerTitle>
+			<ObjectPageDynamicHeaderTitle>
+				<actions>
+					<m:ToggleButton text="Edit" type="Emphasized"/>
+					<m:Button text="Delete" type="Transparent"/>
+					<m:Button text="Copy" type="Transparent"/>
+					<m:Button icon="sap-icon://action" type="Transparent"/>
+				</actions>
+			</ObjectPageDynamicHeaderTitle>
+		</headerTitle>
+	</ObjectPageLayout>
 </mvc:View>
