Datamodel aangepast zodat het zowel het idee als het in te vullen veld bevat.

--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -4,7 +4,7 @@
 			<pages>
 				<Page id="page" title="{i18n>title}">
 					<content>
-						<List items="{/d/results}">
+						<List items="{/d/ideas}">
 							<items>
 								<ObjectListItem title="{Name}" press="onIdeaSelection" type="Navigation"/></items>
 						</List>
